# azure_server

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  azbuild.py
src/: CMakeLists.txt
src/daemon/: azure.cc
src/libazure/: daemon.cc  daemon.h  discovery_client.cc  discovery_service.cc  logging.cc  logging.h  logging_android.cc  logging_win.cc  targets.h
src/libazure/discovery/: discovery_client.cc  discovery_client.h  discovery_service.cc  discovery_service.h
src/libazure/services/: connection_service.cc  connection_service.h
src/libazure/util/: current_device.h  current_device_android.cc  current_device_win.cc  delegate.h  string.cc  string.h
